syntax = "proto3";
package blog.step2.v1beta1;

import "cosmos/base/query/v1beta1/pagination.proto";
// this line is used by starport scaffolding # 1
import "step2/v1beta1/blog.proto";


option go_package = "github.com/amaurymartiny/step2/x/step2/types";

// Query defines the gRPC querier service.
service Query {
    // this line is used by starport scaffolding # 2
	rpc AllComment(QueryAllCommentRequest) returns (QueryAllCommentResponse);
	rpc AllPost(QueryAllPostRequest) returns (QueryAllPostResponse);
}

// this line is used by starport scaffolding # 3
message QueryAllCommentRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllCommentResponse {
	repeated Comment comment = 1;
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
message QueryAllPostRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllPostResponse {
	repeated Post post = 1;
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
